--- a/OasisFamiliarWebSite/Views/Receptionist/Factura.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/Factura.cshtml
@@ -5,15 +5,13 @@
     Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
 
-<h2>Detalles de Factura</h2>
+<h2 style="text-align:center;">Factura: XXX1010</h2>
+
+
 
 <table class="table table-bordered border border-success">
     <thead>
         <tr style="background-color:#32A9EE;color:white;">
-            <th>
-                <label for="staticEmail" class="col-sm-2 col-form-label">ID_Factura:</label>
-                <input type="text" readonly class="form-control edit_id" id="ID Factura" name="ID Factura" placeholder="ID Factura">
-            </th>
             <th>
                 <label for="staticEmail" class="col-sm-2 col-form-label">Fecha:</label>
                 <input type="text" readonly class="form-control edit_id" id="Fecha" name="Fecha" placeholder="Fecha">
@@ -34,6 +32,84 @@
             </td>
         </tr>
 
+        <tr>
+            <td>
+                @* un pequeño espacio para que se vea ordenado *@
+            </td>
+        </tr>
+
+        <tr style="background-color:#ffac00;color:white;">
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Producto:</label>
+                <input type="text" readonly class="form-control edit_id" id="Producto" name="Producto" placeholder="Producto">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Precio:</label>
+                <input type="text" readonly class="form-control edit_id" id="Precio" name="Precio" placeholder="Precio">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad:</label>
+                <input type="text" readonly class="form-control edit_id" id="Cantidad" name="Cantidad" placeholder="Cantidad">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Total:</label>
+                <input type="text" readonly class="form-control edit_id" id="Total" name="Total" placeholder="Total">
+            </th>
+        </tr>
+        <tr style="background-color:#ffac00;color:white;">
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Producto:</label>
+                <input type="text" readonly class="form-control edit_id" id="Producto" name="Producto" placeholder="Producto">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Precio:</label>
+                <input type="text" readonly class="form-control edit_id" id="Precio" name="Precio" placeholder="Precio">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad:</label>
+                <input type="text" readonly class="form-control edit_id" id="Cantidad" name="Cantidad" placeholder="Cantidad">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Total:</label>
+                <input type="text" readonly class="form-control edit_id" id="Total" name="Total" placeholder="Total">
+            </th>
+        </tr>
+        <tr style="background-color:#ffac00;color:white;">
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Producto:</label>
+                <input type="text" readonly class="form-control edit_id" id="Producto" name="Producto" placeholder="Producto">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Precio:</label>
+                <input type="text" readonly class="form-control edit_id" id="Precio" name="Precio" placeholder="Precio">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad:</label>
+                <input type="text" readonly class="form-control edit_id" id="Cantidad" name="Cantidad" placeholder="Cantidad">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Total:</label>
+                <input type="text" readonly class="form-control edit_id" id="Total" name="Total" placeholder="Total">
+            </th>
+        </tr>
+        <tr style="background-color:#ffac00;color:white;">
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Producto:</label>
+                <input type="text" readonly class="form-control edit_id" id="Producto" name="Producto" placeholder="Producto">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Precio:</label>
+                <input type="text" readonly class="form-control edit_id" id="Precio" name="Precio" placeholder="Precio">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad:</label>
+                <input type="text" readonly class="form-control edit_id" id="Cantidad" name="Cantidad" placeholder="Cantidad">
+            </th>
+            <th>
+                <label for="staticEmail" class="col-sm-2 col-form-label">Total:</label>
+                <input type="text" readonly class="form-control edit_id" id="Total" name="Total" placeholder="Total">
+            </th>
+        </tr>
         <tr style="background-color:#ffac00;color:white;">
             <th>
                 <label for="staticEmail" class="col-sm-2 col-form-label">Producto:</label>
