--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -6,11 +6,13 @@
 }
 
 <h3>Modulo de Cliente (INDEX)</h3>
-<h3>Bienvenido (nombre del cliente</h3>
+<h3>Bienvenido (nombre del cliente)</h3>
 
 <h3>Esta usando : Mesa </h3>
 <h3>Cuenta actual: </h3>
 
+
+<h1>@User.Identity.Name</h1>
 
 <div>
     <button>Detalle de cuenta</button>
