--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -76,15 +76,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Oasis Familiar ", "Index", "Receptionist", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Oasis Familiar ", "MenuPage", "Receptionist", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Mesas", "Index", "Receptionist")</li>
                     <li>@Html.ActionLink("Factura", "Factura", "Receptionist")</li>
                     <li>@Html.ActionLink("Ver Facturas Pendientes", "VerFacturaPendientes", "Receptionist")</li>
-                    <li>@Html.ActionLink("Historial", "Contact", "Receptionist")</li>
-                    <li>@Html.ActionLink("Salir Del Sistema", "Contact", "Receptionist ")</li>
+                    <li>@Html.ActionLink("Historial", "Historial", "Receptionist")</li>
+                    <li>@Html.ActionLink("Salir Del Sistema", "CerrarSession", "Receptionist")</li>
                 </ul>
 
             </div>
