--- a/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/MenuPage.cshtml
@@ -152,7 +152,7 @@ cl
     <div class="navbar navbar-inverse navbar-fixed-bottom" style="background-color: slategray; height: 10px;">
         <div class="container">
             <div class="navbar-header" style="text-align: center">
-                <h4 style="color:white;" class="entry-title">Factura : XC0001</h4>
+                <h4 style="color:white;" class="entry-title">Factura : @ViewBag.Message</h4>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
