--- a/OasisFamiliarWebSite/Views/Customer/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Customer/Index.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
-<h3>Modulo de Cliente (INDEX)</h3>
+
+<h3>Modulo de Cliente @HttpContext.Current.Session["Usuario"].ToString()</h3>
 <h3>Bienvenido (nombre del cliente)</h3>
 
 <h3>Esta usando : Mesa </h3>
 <h3>Cuenta actual: </h3>
 
-
-<h1>@User.Identity.Name</h1>
 
 <div>
     <button>Detalle de cuenta</button>
