--- a/OasisFamiliarWebSite/Views/Receptionist/Index.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/Index.cshtml
@@ -86,8 +86,8 @@
 <!--Modal information-->
 
 
-<table class="table table-bordered border border-success">
-    <thead>
+<table class="table table-bordered border border-success ">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Nombre_Mesa)
