--- a/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
+++ b/OasisFamiliarWebSite/Views/Shared/_LayoutReceptionist.cshtml
@@ -81,8 +81,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Mesas", "Index", "Receptionist")</li>
-                    <li>@Html.ActionLink("Factura", "Factura", "Receptionist")</li>
-                    <li>@Html.ActionLink("Ver Facturas Pendientes", "VerFacturaPendientes", "Receptionist")</li>
+                    @* <li>@Html.ActionLink("Factura", "Factura", "Receptionist")</li> *@
+                    <li>@Html.ActionLink("Facturas Pendientes", "VerFacturaPendientes", "Receptionist")</li>
                     <li>@Html.ActionLink("Historial", "Historial", "Receptionist")</li>
                     <li>@Html.ActionLink("Salir Del Sistema", "CerrarSession", "Receptionist")</li>
                 </ul>
