--- a/OasisFamiliarWebSite/Views/Receptionist/VerFactura.cshtml
+++ b/OasisFamiliarWebSite/Views/Receptionist/VerFactura.cshtml
@@ -5,7 +5,8 @@
     Layout = "~/Views/Shared/_LayoutReceptionist.cshtml";
 }
 
-<h2 style="text-align:center;">Factura: XXX1010</h2>
+<h2 style="text-align:center;">Factura: @ViewBag.Data.idFactura</h2>
+<h3 style="text-align:center;">@ViewBag.Data.Fecha</h3>
 
 
 <table class="table table-bordered border border-success ">
@@ -16,23 +17,29 @@
             <th scope="col">Precio</th>
             <th scope="col">Cantidad</th>
             <th scope="col">Total </th>
-            <th scope="col">
         </tr>
     </thead>
     <tbody>
-        @{ int i = 1;}}
+        @{ int i = 1;}
         @foreach (var item in Model)
         {
 
             <tr>
-                <th scope="row">1</th>
+                <td scope="row">@i</td>
                 <td>@item.productoNombre</td>
                 <td>@item.precio</td>
                 <td>@item.Cantidad</td>
-                <td>Total???</td>
-            </tr>            
+                <td id="loop">@item.total</td>
+            </tr>
+
+            i+=1;
         }
-        </tbody>
+        <tr>
+            <td colspan="4" style="text-align:right; font-stretch:expanded; font-weight:bold">TOTAL:</td>
+            <td id="total">TOTAL</td>
+
+        </tr>
+    </tbody>
 </table>
 
 <div class="btn-group" contextmenu="center">
@@ -43,6 +50,23 @@
 
 
 
+<script>
+
+    $(function () {
+
+        var TotalValue = 0;
+
+        $("tr #loop").each(function (index, value) {
+            currentRow = parseFloat($(this).text());
+            TotalValue += currentRow
+        });
+
+        document.getElementById('total').innerHTML = TotalValue;
+
+    });
+
+    
+</script>
 
 
 
